Revert "SCR #270940 - fix: modals and sidebars height jumping on ios"
This reverts commit e77167925de1b4b5ce82d9e6c1b188a4862497e0.

--- a/src/modules/core/components/modal/styles/modal.component.scss
+++ b/src/modules/core/components/modal/styles/modal.component.scss
@@ -408,25 +408,16 @@
 // fixes for ios
 .wlc-body--os-ios {
 
-    .wlc-modal {
+    .wlc-modal__dialog {
+        margin: ef.get-value($hostModal, 'modalOffsetIosMobile');
 
-        &__dialog {
-            margin: ef.get-value($hostModal, 'modalOffsetIosMobile');
+        &--scrollable {
 
-            &--scrollable {
-
-                .wlc-modal__body {
-                    @include bm.get-mq-map('height', $hostModal, 'staticMaxHeightMobileIos');
-                    overflow-y: auto;
-                }
+            .wlc-modal__body {
+                @include bm.get-mq-map('height', $hostModal, 'staticMaxHeightMobileIos');
+                overflow-y: auto;
             }
         }
-    }
-
-    .modal-backdrop {
-        @include bm.get-mq-map('top', $hostModal, 'backdropIosTop');
-        @include bm.get-mq-map('transform', $hostModal, 'backdropIosTransform');
-        will-change: transform;
     }
 }
 
